--- a/index.html
+++ b/index.html
@@ -32,14 +32,13 @@
           <hr>
           <ul>
             <!-- List of links under menuset 1 -->
-            <li><a href="#" title="Link">Глава 1</a></li>
+            <li><a href="https://vlad-b-g-coder.github.io/history-comics" title="Link">Глава 1</a></li>
             <li><a href="#" title="Link">Глава 2</a></li>
-            <li><a href="#" title="Link">Глава 3</a></li>
+            <li><a href="https://vlad-b-g-coder.github.io/history-comic-" title="Link">Глава 3</a></li>
 			              <li><a href="#" title="Link">Глава 4</a></li>
 
 			              <li><a href="#" title="Link">Глава 5</a></li>
 
-            <li class="notimp"><!-- notimp class is applied to remove this link from the tablet and phone views --><a href="#"  title="Link">Link 4</a></li>
           </ul>
         </nav>
       </div>
