--- a/index.html
+++ b/index.html
@@ -89,15 +89,15 @@
   <footer> 
     <!-- This is the footer with default 3 divs -->
     <div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam varius sem neque. Integer ornare.</p>
+      <p></p>
     </div>
     <div>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam varius sem neque. Integer ornare.</p>
+      <p></p>
     </div>
     <div class="footerlinks">
-      <p><a href="#" title="Link">Link 1 </a></p>
-      <p><a href="#" title="Link">Link 2</a></p>
-      <p><a href="#" title="Link">Link 3</a></p>
+      <p><a href="#" title="Link"></a></p>
+      <p><a href="#" title="Link"></a></p>
+      <p><a href="#" title="Link"></a></p>
     </div>
   </footer>
 </div>
