--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><a href="https://vlad-b-g-coder.github.io/history-comics" title="Link">Глава 1</a></li>
             <li><a href="#" title="Link">Глава 2</a></li>
             <li><a href="https://vlad-b-g-coder.github.io/history-comic-" title="Link">Глава 3</a></li>
-			              <li><a href="#" title="Link">Глава 4</a></li>
+            <li><a href="https://vlad-b-g-coder.github.io/history-comicc" title="Link">Глава 4</a></li>
 
 			              <li><a href="#" title="Link">Глава 5</a></li>
 
@@ -63,19 +63,21 @@
     <a href="https://vlad-b-g-coder.github.io/history-comic-" style="text-decoration: none; color: inherit; display: block;">
       <div><img alt="sample" src="images/photo2.png"></div>
       <p class="price">Глава 3</p>
-      <p class="productContent">Сачивко Даниил Денисович и Бусел Арсений Александрович</p>
+      <p class="productContent">Сачивко Даниил Денисович</p>
     </a>
     <input type="button" name="button" value="Читать" class="buyButton" onclick="window.location.href='https://vlad-b-g-coder.github.io/history-comic-';">
   </article>
       </div>
       <div class="productRow"> 
         <!-- Each product row contains info of 3 elements -->
-        <article class="productInfo"> <!-- Each individual product description -->
-          <div><img alt="sample" src="images/photo3.png"></div>
-          <p class="price">Глава 4</p>
-          <p class="productContent">Не предаставленна работа</p>
-          <input type="button" name="button" value="Читать" class="buyButton">
-        </article>
+<article class="productInfo">
+    <a href="https://vlad-b-g-coder.github.io/history-comicс" style="text-decoration: none; color: inherit; display: block;">
+      <div><img alt="sample" src="images/photo4.png"></div>
+      <p class="price">Глава 4</p>
+      <p class="productContent">Бусел Арсений Александрович</p>
+    </a>
+    <input type="button" name="button" value="Читать" class="buyButton" onclick="window.location.href='https://vlad-b-g-coder.github.io/history-comic-';">
+  </article>
         
         <article class="productInfo"><!-- Each individual product description -->
           <div><img alt="sample" src="images/photo3.png"></div>
@@ -95,9 +97,9 @@
       <p></p>
     </div>
     <div class="footerlinks">
+      <p><a href="#" title="Link"> </a></p>
       <p><a href="#" title="Link"></a></p>
-      <p><a href="#" title="Link"></a></p>
-      <p><a href="#" title="Link"></a></p>
+      <p><a href="#" title="Link"</a></p>
     </div>
   </footer>
 </div>
