--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div class="productRow"> 
         <!-- Each product row contains info of 3 elements -->
 <article class="productInfo">
-    <a href="https://vlad-b-g-coder.github.io/history-comicс" style="text-decoration: none; color: inherit; display: block;">
+    <a href="https://vlad-b-g-coder.github.io/history-comicc/" style="text-decoration: none; color: inherit; display: block;">
       <div><img alt="sample" src="images/photo4.png"></div>
       <p class="price">Глава 4</p>
       <p class="productContent">Бусел Арсений Александрович</p>
