--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section id="offer"> 
     <!-- The offer section displays a banner text for promotions -->
     <h2>УСРС "Этапы формирования белорусской нации" в комиксах.</h2>
-    <p>Над комиксом работали: Влад Б. Г, Сачивко Даниил Денисович и Бусел Арсений Александрович </p>
+    <p>Над комиксом работали: Влад Б. Г, Коробов А. А, Сачивко Даниил Денисович и Бусел Арсений Александрович </p>
   </section>
   <div id="content">
     <section class="sidebar"> 
@@ -63,7 +63,7 @@
     <a href="https://vlad-b-g-coder.github.io/history-comic-" style="text-decoration: none; color: inherit; display: block;">
       <div><img alt="sample" src="images/photo2.png"></div>
       <p class="price">Глава 3</p>
-      <p class="productContent">Сачивко Даниил Денисович</p>
+      <p class="productContent">Сачивко Даниил Денисович и Бусел Арсений Александрович</p>
     </a>
     <input type="button" name="button" value="Читать" class="buyButton" onclick="window.location.href='https://vlad-b-g-coder.github.io/history-comic-';">
   </article>
@@ -74,7 +74,8 @@
     <a href="https://vlad-b-g-coder.github.io/history-comicc" style="text-decoration: none; color: inherit; display: block;">
       <div><img alt="sample" src="images/photo4.png"></div>
       <p class="price">Глава 4</p>
-      <p class="productContent">Бусел Арсений Александрович</p>
+      <p class="productContent">Коробов А. А.
+</p>
     </a>
     <input type="button" name="button" value="Читать" class="buyButton" onclick="window.location.href='https://vlad-b-g-coder.github.io/history-comic-';">
   </article>
