--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
           <ul>
             <!-- List of links under menuset 1 -->
             <li><a href="https://vlad-b-g-coder.github.io/history-comics" title="Link">Глава 1</a></li>
-            <li><a href="#" title="Link">Глава 2</a></li>
+            <li><a href="https://vlad-b-g-coder.github.io/history-comic2" title="Link">Глава 2</a></li>
             <li><a href="https://vlad-b-g-coder.github.io/history-comic-" title="Link">Глава 3</a></li>
             <li><a href="https://vlad-b-g-coder.github.io/history-comicc" title="Link">Глава 4</a></li>
 
-			              <li><a href="#" title="Link">Глава 5</a></li>
+			              <li><a href="https://vlad-b-g-coder.github.io/history-comic5" title="Link">Глава 5</a></li>
 
           </ul>
         </nav>
@@ -53,12 +53,14 @@
     </a>
     <input type="button" name="button" value="Читать" class="buyButton" onclick="window.location.href='https://vlad-b-g-coder.github.io/history-comics';">
   </article>
-        <article class="productInfo"><!-- Each individual product description -->
-          <div><img alt="sample" src="images/photo3.png"></div>
-          <p class="price">Глава 2</p>
-          <p class="productContent"> </p>
-          <input type="button" name="button" value="Читать" class="buyButton">
-        </article>
+  <article class="productInfo">
+    <a href="https://vlad-b-g-coder.github.io/history-comics" style="text-decoration: none; color: inherit; display: block;">
+      <div><img alt="sample" src="images/photo12.png"></div>
+      <p class="price">Глава 2</p>
+      <p class="productContent">Трабо Станислав Дмитриевич</p>
+    </a>
+    <input type="button" name="button" value="Читать" class="buyButton" onclick="window.location.href='https://vlad-b-g-coder.github.io/history-comics';">
+  </article>
   <article class="productInfo">
     <a href="https://vlad-b-g-coder.github.io/history-comic-" style="text-decoration: none; color: inherit; display: block;">
       <div><img alt="sample" src="images/photo2.png"></div>
@@ -74,18 +76,21 @@
     <a href="https://vlad-b-g-coder.github.io/history-comicc" style="text-decoration: none; color: inherit; display: block;">
       <div><img alt="sample" src="images/photo4.png"></div>
       <p class="price">Глава 4</p>
-      <p class="productContent">Коробов А. А.
+      <p class="productContent">Коробов Артём Алексеевич
 </p>
     </a>
     <input type="button" name="button" value="Читать" class="buyButton" onclick="window.location.href='https://vlad-b-g-coder.github.io/history-comic-';">
   </article>
         
-        <article class="productInfo"><!-- Each individual product description -->
-          <div><img alt="sample" src="images/photo3.png"></div>
-          <p class="price">Глава 5</p>
-          <p class="productContent">Не предаставленна работа</p>
-          <input type="button" name="button" value="Читать" class="buyButton">
-        </article>
+<article class="productInfo">
+    <a href="https://vlad-b-g-coder.github.io/history-comic5" style="text-decoration: none; color: inherit; display: block;">
+      <div><img alt="sample" src="images/photo5.png"></div>
+      <p class="price">Глава 5</p>
+      <p class="productContent">Шавлюга Александр Васильевич
+</p>
+    </a>
+    <input type="button" name="button" value="Читать" class="buyButton" onclick="window.location.href='https://vlad-b-g-coder.github.io/history-comic-';">
+  </article>
       </div>
     </section>
   </div>
