--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <li><a href="https://vlad-b-g-coder.github.io/history-comics" title="Link">Глава 1</a></li>
             <li><a href="https://vlad-b-g-coder.github.io/history-comic2" title="Link">Глава 2</a></li>
             <li><a href="https://vlad-b-g-coder.github.io/history-comic-" title="Link">Глава 3</a></li>
-            <li><a href="https://vlad-b-g-coder.github.io/history-comicc" title="Link">Глава 4</a></li>
+            <li><a href="https://vlad-b-g-coder.github.io/history-comic5" title="Link">Глава 4</a></li>
 
 			              <li><a href="https://vlad-b-g-coder.github.io/history-comic5" title="Link">Глава 5</a></li>
 
@@ -54,7 +54,7 @@
     <input type="button" name="button" value="Читать" class="buyButton" onclick="window.location.href='https://vlad-b-g-coder.github.io/history-comics';">
   </article>
   <article class="productInfo">
-    <a href="https://vlad-b-g-coder.github.io/history-comics" style="text-decoration: none; color: inherit; display: block;">
+    <a href="https://vlad-b-g-coder.github.io/history-comic2" style="text-decoration: none; color: inherit; display: block;">
       <div><img alt="sample" src="images/photo12.png"></div>
       <p class="price">Глава 2</p>
       <p class="productContent">Трабо Станислав Дмитриевич</p>
