--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section id="offer"> 
     <!-- The offer section displays a banner text for promotions -->
     <h2>УСРС "Этапы формирования белорусской нации" в комиксах.</h2>
-    <p>Над комиксом работали: Влад Б. Г, Коробов А. А, Сачивко Даниил Денисович и Бусел Арсений Александрович </p>
+    <p>Над комиксом работали: Влад Б. Г, Трабо Станислав Дмитриевич, Сачивко Даниил Денисович, Бусел Арсений Александрович, Коробов Артём Алексеевич и Шавлюга Александр Васильевич.</p>
   </section>
   <div id="content">
     <section class="sidebar"> 
