--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <section id="offer"> 
     <!-- The offer section displays a banner text for promotions -->
     <h2>УСРС "Этапы формирования белорусской нации" в комиксах.</h2>
-    <p>Над комиксом работали: Влад Б. Г, Трабо Станислав Дмитриевич, Сачивко Даниил Денисович, Бусел Арсений Александрович, Коробов Артём Алексеевич и Шавлюга Александр Васильевич.</p>
+    <p>Над комиксом работали: Влад Б. Г, Трабо Станислав Дмитриевич, Богацкий Илья Александрович, Сачивко Даниил Денисович, Бусел Арсений Александрович, Коробов Артём Алексеевич и Шавлюга Александр Васильевич.</p>
   </section>
   <div id="content">
     <section class="sidebar"> 
@@ -76,7 +76,7 @@
     <a href="https://vlad-b-g-coder.github.io/history-comicc" style="text-decoration: none; color: inherit; display: block;">
       <div><img alt="sample" src="images/photo4.png"></div>
       <p class="price">Глава 4</p>
-      <p class="productContent">Коробов Артём Алексеевич
+      <p class="productContent">Коробов Артём Алексеевич и Богацкий Илья Александрович
 </p>
     </a>
     <input type="button" name="button" value="Читать" class="buyButton" onclick="window.location.href='https://vlad-b-g-coder.github.io/history-comic-';">
